- PR#7026, GPR#288: remove write barrier for polymorphic variants without
  arguments
  (Simon Cruanes)
- PR#7031: new warning, ambiguous guarded or-patterns (Luc Maranget,
  Gabriel Scherer, report by Martin Clochard and Claude Marché).
- PR#7067: Performance regression in the native compiler for long
  nested structures (Alain Frisch, report by Daniel Bünzli, review
  by Jacques Garrigue)
- GPR#17: some cmm optimizations of integer operations with constants
  (Stephen Dolan, review by Pierre Chambart)
- GPR#109: new unboxing strategy for float and int references (Vladimir Brankov,
  review by Alain Frisch)
- GPR#107: Prevent more unnecessary float boxing, especially in `if` and `match`
  (Vladimir Brankov, review by Alain Frisch)
- GPR#115: More precise typing of values at the C-- and Mach level,.
  (Xavier Leroy, review by Pierre Chambart)
- GPR#207: Colors in compiler messages (warnings, errors)
  (Simon Cruanes, review by Gabriel Scherer)
- GPR#258: more precise information on PowerPC instruction sizes
  (Pierre Chambart, Xavier Leroy)
- PR#7022, GPR#259: unbox float and boxed ints earlier, avoid second pass
  (Alain Frisch)
- PR#7064, GPR#316: allowing to mark compilation units and sub-modules as
  deprecated (Alain Frisch)
- GPR#263: improve code generation for if-equivalents of (&&) and (||)
  (Pierre Chambart)
- GPR#271: Fix incorrect mutability flag when records are built using "with"
  (Mark Shinwell)
- GPR#270: Make [transl_exception_constructor] generate [Immutable] blocks
  (Mark Shinwell)
- GPR#275: native-code generator for IBM z System running Linux.
  In memoriam Gene Amdahl, 1922-2015.
  (Bill O'Farrell, Tristan Amini, Xavier Leroy)
- GPR#282: relax short-paths safety check in presence of module aliases, take
  penalty into account while building the printing map.
  (Thomas Refis, Leo White)
- GPR#306: Instrument the compiler to debug performance regressions
  (Pierre Chambart)