@@ -22,6 +22,7 @@ type error =
   | Variable_in_scope of Location.t * string
   | Other of Location.t
   | Ill_formed_ast of Location.t * string
+  | Invalid_package_type of Location.t * string
 
 exception Error of error
 exception Escape_error
